--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
+    "less": "^2.7.3",
+    "less-loader": "^4.0.5",
     "request": "^2.83.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
